# motyf

./: CMakeLists.txt  LICENSE  Manifesto.md  README.md  example.ms
docs/: SyntaxDiagram.md
include/motyf/: ast_node.hpp  motyf.hpp  parser.hpp  scanner.hpp
source/: ast_node.cpp  parser.cpp  scanner.cpp
src/: error.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
tests/: parsing.cpp  rex.cpp  scanner.cpp
